@@ -21,6 +21,7 @@ Date:
         - Add OSX-arm64 build.
         - Display link warnings in both the tooltips and the dropdowns.
         - Add additional ways of counting buildings and modules when displaying the shopping list.
+        - Allow disable-and-reload when there's an error loading a mod.
     Bugfixes:
         - Fixed recipes now become accessible when their crafter does.
         - Keyboard and UI fixes/improvements in the Welcome screen.
